test/ui/invalid_export.stderr
error: invalid rust_export item
   ┌─ $DIR/invalid_export.cc:11:5
   │
11 │ ╭     struct FooBar
12 │ │     {
13 │ │     };
   │ ╰─────^ only using declarations are allowed here

error: invalid rust_export item
   ┌─ $DIR/invalid_export.cc:15:5
   │
15 │     int baz;
   │     ^^^^^^^ only using declarations are allowed here
